[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Clay O'Neil <oneil512@umn.edu>"]
description = "A debugger that can step forward AND backwards"
readme = "README.md"
version = "0.0.1"
packages = [{ include = "timeless_debugger"}]

[tool.poetry.dependencies]
pydantic = "^1.9.1"
python = "^3.9"
