[tool.isort]
profile = "black"

[tool.poetry]
name = "chronos"
version = "0.1.0"
description = "A timeless debugger"
authors = ["Clay O'Neil <oneil512@umn.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pylint = "^2.14.5"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

